force-app/main/default/objects/Application__c/fields/ApplicationCreationDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationCreationDate__c</fullName>
    <description>Application Creation Date</description>
    <label>Application Creation Date</label>
    <type>DateTime</type>
</CustomField>