force-app/main/default/objects/Application__c/fields/ApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovalDate__c</fullName>
    <description>Approval date of the application. To be populated on approval.</description>
    <label>Approval Date</label>
    <type>DateTime</type>
</CustomField>