force-app/main/default/objects/Application__c/fields/LoanAmount__c.field-meta.xml
<CustomField>
    <fullName>LoanAmount__c</fullName>
    <description>Total Loan Amount</description>
    <label>Loan Amount</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>