force-app/main/default/objects/Application__c/fields/LoanTermInMonths__c.field-meta.xml
<CustomField>
    <fullName>LoanTermInMonths__c</fullName>
    <description>Initial applied loan Term in months.</description>
    <label>Loan Term (months)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>