force-app/main/default/objects/Application__c/fields/SYS_NumberOfPrimaryApplicants__c.field-meta.xml
<CustomField>
    <fullName>SYS_NumberOfPrimaryApplicants__c</fullName>
    <description>Roll up field to count the number of applicants with primary flag checked for this application. This field will be used for validating the primary applicant count.</description>
    <label>Number of Primary Applicants</label>
    <summaryFilterItems>
        <field>Applicant__c.IsPrimaryApplicant__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Applicant__c.Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>