force-app/main/default/objects/Application__c/fields/SYS_TotalOwnership__c.field-meta.xml
<CustomField>
    <fullName>SYS_TotalOwnership__c</fullName>
    <description>Sum of all ownership percentage of applicants. It is a system field used to validate the ownership should be 100% when submitting the application.</description>
    <label>Total Ownership</label>
    <summarizedField>Applicant__c.ApplicationOwnership__c</summarizedField>
    <summaryForeignKey>Applicant__c.Application__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>