force-app/main/default/objects/Application__c/validationRules/TotalApplicationOwnershipShouldBe100.validationRule-meta.xml
<ValidationRule>
    <fullName>TotalApplicationOwnershipShouldBe100</fullName>
    <active>true</active>
    <description>Total Application Ownership Should Be 100 for a Submitted application.</description>
    <errorConditionFormula>TEXT(Status__c) &lt;&gt; &apos;Initiated&apos; &amp;&amp;  SYS_TotalOwnership__c &lt;&gt; 1</errorConditionFormula>
    <errorMessage>Total ownership of all applicants should be equal to 100 for a submitted application</errorMessage>
</ValidationRule>